# rating-icon-site

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
.wrangler/tmp/bundle-F36a2v/: middleware-loader.entry.ts
.wrangler/tmp/bundle-UlgZo0/: middleware-loader.entry.ts
.wrangler/tmp/bundle-iHVnaa/: middleware-loader.entry.ts
.wrangler/tmp/bundle-omkVqN/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/pages-A7rxRE/: rcrsxlv69yb.js  rcrsxlv69yb.js.map
project.inlang/: project_id  settings.json
public/: _headers  robots.txt
src/: env.d.ts  lib.rs  site.config.ts  utils.rs
src/aimodels/attr/: metadata.json
src/aimodels/star/: metadata.json
src/components/: BaseMeta.astro  SEO.astro
src/layouts/: Base.astro
src/pages/: favicon.ico.ts  index.astro  manifest.json.ts
src/pages/api/: ai.ts
src/pages/api/proxy/: proxy.ts
src/pages/en/: index.astro
src/wasm/: export_wasm.ts
supabase/: config.toml
