[package]
name = "rating-icon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25" }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
walkdir = "2.5"
regex = "1.10"

[profile.release]
# https://zenn.dev/dozo/articles/14b76b561f3b45
# Tell `rustc` to optimize for small code size.
opt-level = "s"
codegen-units = 1
lto = true
